--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js",
-    "debug":"DEBUG=express:* nodemon src/app.js 2>&1 |tee debugfile"
+    "dev": "nodemon app.js",
+    "debug": "DEBUG=express:* nodemon app.js 2>&1 |tee debugfile"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,10 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "pug": "^3.0.3"
   }
 }
