--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 ### Server Config ###
+DB_NAME=enterprise
 PORT=5000
 HOST=0.0.0.0
+VIEW_ENGINE=pug
 NODE_ENV=development
 
 ### Database Config ###
